--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.7.1</version>
         </dependency>
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+        </dependency>
 
     </dependencies>
 
@@ -47,6 +51,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.4.1</version>
             </plugin>
         </plugins>
     </build>
