--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://fuf-server.mysql.database.azure.com:3306/fuf
+spring.datasource.url=jdbc:mysql://fuf-server.mysql.database.azure.com:3306/fuf?enabledTLSProtocols=TLSv1.2
 spring.datasource.username=aga
 spring.datasource.password=Fufadmin!1234
 
-
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
