--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://fuf-server.mysql.database.azure.com:3306/fuf?enabledTLSProtocols=TLSv1.2
+spring.datasource.url=jdbc:mysql://fuf-server.mysql.database.azure.com:3306/fuf?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=aga
 spring.datasource.password=Fufadmin!1234
 
