--- a/.github/workflows/main_fuf.yml
+++ b/.github/workflows/main_fuf.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - fuf
+name: Build and deploy JAR app to Azure Web App - FUF
 
 on:
   push:
@@ -47,7 +47,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'fuf'
+          app-name: 'FUF'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_E1EDE01C61F74CE792D0671965B68126 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_450FB37D7BE24796B2A94E422312D22C }}
           package: '*.jar'
